<resources>
    <string name="app_name">CryptoPocket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_pocket">My pocket</string>
    <string name="search_currencies">Cryto market</string>
    <string name="app_icon">App icon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="empty_pocket">You haven\'t choosen any currency yet. Let\'s find some in the market!</string>
    <string name="empty_pocket_image">Empty pocket image</string>
    <string name="log_out_btn">Log out button</string>
    <string name="search_page_btn">Click to view all currencies</string>
    <string name="coin_image">Coin image</string>
    <string name="buy_price_label">Buy price($)</string>
    <string name="sell_price">Sell price($)</string>
    <string name="add_btn">Click to add to pocket</string>
    <string name="remove_btn">Click to remove from pocket</string>
    <string name="search">Search</string>
    <string name="search_fragment_label">All items</string>
    <string name="pocket_fragment_label">My pocket</string>
    <string name="added_btn">This it currency is already added</string>
</resources>